[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ocean.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/MainEnvironment.tres" type="Environment" id=3]
[ext_resource path="res://Assets/fern.tres" type="Material" id=4]
[ext_resource path="res://Assets/grass.tres" type="Material" id=5]
[ext_resource path="res://Vegetacao.gd" type="Script" id=6]
[ext_resource path="res://Assets/Objects/bushes/02/bush_02.obj" type="ArrayMesh" id=7]
[ext_resource path="res://Assets/quickSand.tres" type="Material" id=8]
[ext_resource path="res://Assets/bush.tres" type="Material" id=9]
[ext_resource path="res://Assets/portal_animatedtexture.tres" type="Texture" id=10]
[ext_resource path="res://Assets/Objects/modular_terrain_collection/Cave_Prop_Entrance_1.obj" type="ArrayMesh" id=11]
[ext_resource path="res://saveLoad.tscn" type="PackedScene" id=12]
[ext_resource path="res://HUB.tscn" type="PackedScene" id=13]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 10 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 49, 0.5, 49 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 40, 40, 5 )

[sub_resource type="QuadMesh" id=4]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 10 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.721, 0.5, 0.2 )

[sub_resource type="QuadMesh" id=7]
size = Vector2( 2, 2 )

[sub_resource type="SpatialMaterial" id=8]
albedo_texture = ExtResource( 10 )

[node name="Vegetacao" type="Spatial"]
script = ExtResource( 6 )

[node name="SaveLoad" parent="." instance=ExtResource( 12 )]
visible = false
margin_top = -1.0
margin_bottom = -1.0

[node name="HUB" parent="." instance=ExtResource( 13 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 3 )

[node name="Ocean" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )

[node name="mudeater" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -75, 4, -48 )

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( -2, 0, -3.01992e-07, 0, 2, 0, 3.01992e-07, 0, -2, 0, 1, 0 )
use_collision = true
width = 100.0
depth = 100.0
material = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox2" type="CSGBox" parent="CSGBox"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 50, 10, 0 )
width = 100.0
height = 20.0
material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox3" type="CSGBox" parent="CSGBox"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 10, -50 )
width = 100.0
height = 20.0
material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox4" type="CSGBox" parent="CSGBox"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -50, 10, 0 )
width = 100.0
height = 20.0
material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox6" type="CSGBox" parent="CSGBox"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 10, 50 )
width = 100.0
height = 20.0
material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox7" type="CSGBox" parent="CSGBox"]
transform = Transform( 1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, -41, 10, 0 )
visible = false
width = 15.0
height = 20.0
material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox8" type="CSGBox" parent="CSGBox"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 37.7, 10, 0 )
visible = false
width = 25.0
height = 20.0
material = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CSGBox9" type="CSGBox" parent="CSGBox"]
transform = Transform( -0.5, 0, 7.5498e-08, 0, 0.5, 0, -7.5498e-08, 0, -0.5, 0, -0.5, 0 )
operation = 2
use_collision = true
width = 100.0
height = 10.0
depth = 100.0
__meta__ = {
"_edit_lock_": true
}

[node name="quicksand" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
width = 100.0
depth = 100.0
material = ExtResource( 8 )

[node name="CSGSphere" type="CSGSphere" parent="quicksand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.2862, 0 )
radius = 7.0
radial_segments = 7
rings = 3
material = SubResource( 1 )

[node name="areaQuicksand" type="Area" parent="quicksand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
gravity_vec = Vector3( 0, -4, 0 )

[node name="CollisionShape" type="CollisionShape" parent="quicksand/areaQuicksand"]
shape = SubResource( 2 )

[node name="areaQuicksand2" type="Area" parent="quicksand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8, 0 )
gravity_vec = Vector3( 0, -4, 0 )

[node name="CollisionShape" type="CollisionShape" parent="quicksand/areaQuicksand2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.00176, -4.9184, -1.45573 )
shape = SubResource( 2 )

[node name="Position" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 70, 4, 50 )

[node name="Position2" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -74, 4, -48 )

[node name="Position3" type="Position3D" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -75, 4, 53 )

[node name="bush_florest" type="MeshInstance" parent="."]
transform = Transform( -8.74228e-09, 0, 0.2, 0, 0.2, 0, -0.2, 0, -8.74228e-09, -90, 0, 73.501 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 9 )

[node name="bush_02" type="MeshInstance" parent="bush_florest"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 222.572, -0.580931, 0.0158691 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 9 )

[node name="areaFlorest" type="Area" parent="bush_florest"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 102.879, 71.5252, 0 )

[node name="CollisionShape" type="CollisionShape" parent="bush_florest/areaFlorest"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.16967, 0, 0 )
shape = SubResource( 3 )

[node name="portal" type="CSGMesh" parent="bush_florest"]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 114.831, 68.4858, -7.97946 )
mesh = SubResource( 4 )
material = SubResource( 5 )

[node name="Cave_Prop_Entrance" type="MeshInstance" parent="."]
transform = Transform( -5.46392e-07, 0, -12.5, 0, 12.5, 0, 12.5, 0, -5.46392e-07, -85, 1, -40 )
visible = false
mesh = ExtResource( 11 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null
material/14 = null
material/15 = null
material/16 = null
material/17 = null
material/18 = null
material/19 = null
material/20 = null
material/21 = null
material/22 = null
material/23 = null
material/24 = null
material/25 = null
material/26 = null

[node name="areaCave" type="Area" parent="Cave_Prop_Entrance"]
transform = Transform( 1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Cave_Prop_Entrance/areaCave"]
transform = Transform( 1, 0, -3.55271e-15, 0, 1, 0, 3.55271e-15, 0, 1, -0.5, 0.75, 0.5 )
visible = false
shape = SubResource( 6 )

[node name="portal" type="CSGMesh" parent="Cave_Prop_Entrance"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.448367, 0.851077, 0.738416 )
mesh = SubResource( 7 )
material = SubResource( 8 )

[node name="bush_Inicio" type="MeshInstance" parent="."]
transform = Transform( -8.74228e-09, 0, -0.2, 0, 0.2, 0, 0.2, 0, -8.74228e-09, 80.0079, 0, 27.2858 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 9 )

[node name="bush_02" type="MeshInstance" parent="bush_Inicio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 222.572, -0.580931, 0.0158691 )
mesh = ExtResource( 7 )
material/0 = ExtResource( 9 )

[node name="areaInicio" type="Area" parent="bush_Inicio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 102.879, 71.5252, 0 )

[node name="CollisionShape" type="CollisionShape" parent="bush_Inicio/areaInicio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.16967, 0, 0 )
shape = SubResource( 3 )

[node name="portal" type="CSGMesh" parent="bush_Inicio"]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 114.831, 68.4858, -7.97946 )
mesh = SubResource( 4 )
material = SubResource( 5 )

[connection signal="body_entered" from="quicksand/areaQuicksand" to="." method="_on_areaQuicksand_body_entered"]
[connection signal="body_entered" from="quicksand/areaQuicksand2" to="." method="_on_areaQuicksand2_body_entered"]
[connection signal="body_entered" from="bush_florest/areaFlorest" to="." method="_on_areaFlorest_body_entered"]
[connection signal="body_entered" from="Cave_Prop_Entrance/areaCave" to="." method="_on_areaCave_body_entered"]
[connection signal="body_entered" from="bush_Inicio/areaInicio" to="." method="_on_areaInicio_body_entered"]
